Adding notes for contributors to the README.md.